--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,7 @@
 
     <div class="p-8 bg-gradient-to-b from-slate-900 to-slate-950 border-b border-slate-800">
         <h1 class="text-3xl font-black uppercase tracking-tighter italic text-indigo-500">Cinema Command</h1>
-        <p class="text-xs text-slate-500 font-bold uppercase tracking-widest mt-1">Los Angeles Screening Hub</p>
+        <p class="text-xs text-slate-500 font-bold uppercase tracking-widest mt-1">Matthew's Screening Hub</p>
     </div>
 
     <div class="p-4 space-y-4">
@@ -24,13 +25,26 @@
             <div class="flex justify-between items-start mb-4">
                 <div>
                     <h2 class="text-xl font-black uppercase text-white">New Beverly</h2>
-                    <p class="text-[10px] text-slate-400 font-bold uppercase">Tarantino's 35mm Palace</p>
+                    <p class="text-[10px] text-slate-400 font-bold uppercase tracking-widest">thenewbev.com</p>
                 </div>
                 <span class="bg-red-900/30 text-red-500 text-[10px] font-black px-2 py-1 rounded border border-red-900/50">35MM ONLY</span>
             </div>
             <div class="grid grid-cols-2 gap-3">
-                <a href="https://thenewbeverly.com/schedule/" target="_blank" class="flex items-center justify-center bg-indigo-600 rounded-xl font-bold text-sm">VIEW CALENDAR</a>
-                <a href="https://thenewbeverly.com/blog/" target="_blank" class="flex items-center justify-center bg-slate-800 rounded-xl font-bold text-sm border border-slate-700">FILM BLOG</a>
+                <a href="https://thenewbev.com/schedule/" target="_blank" class="flex items-center justify-center bg-indigo-600 rounded-xl font-bold text-sm">CALENDAR</a>
+                <a href="https://thenewbev.com/blog/" target="_blank" class="flex items-center justify-center bg-slate-800 rounded-xl font-bold text-sm border border-slate-700">BLOG</a>
+            </div>
+        </div>
+
+        <div class="bg-slate-900 p-6 rounded-3xl border border-slate-800 shadow-xl">
+            <div class="flex justify-between items-start mb-4">
+                <div>
+                    <h2 class="text-xl font-black uppercase text-white">The Grove</h2>
+                    <p class="text-[10px] text-slate-400 font-bold uppercase tracking-widest">AMC 14 & IMAX</p>
+                </div>
+                <span class="bg-blue-900/30 text-blue-400 text-[10px] font-black px-2 py-1 rounded border border-blue-900/50">IMAX • RECLINERS</span>
+            </div>
+            <div class="grid grid-cols-1">
+                <a href="https://www.amctheatres.com/movie-theatres/los-angeles/amc-the-grove-14/showtimes" target="_blank" class="flex items-center justify-center bg-slate-100 text-slate-900 rounded-xl font-bold text-sm">SHOWTIMES AT THE GROVE</a>
             </div>
         </div>
 
@@ -38,20 +52,27 @@
             <div class="flex justify-between items-start mb-4">
                 <div>
                     <h2 class="text-xl font-black uppercase text-white">Academy Museum</h2>
-                    <p class="text-[10px] text-slate-400 font-bold uppercase">Miracle Mile • Los Angeles</p>
+                    <p class="text-[10px] text-slate-400 font-bold uppercase tracking-widest">Wilshire & Fairfax</p>
                 </div>
-                <span class="bg-amber-900/30 text-amber-500 text-[10px] font-black px-2 py-1 rounded border border-amber-900/50">MEMBER ACCESS</span>
             </div>
             <div class="grid grid-cols-2 gap-3">
-                <a href="https://www.academymuseum.org/en/calendar" target="_blank" class="flex items-center justify-center bg-amber-600 rounded-xl font-bold text-sm">VIEW CALENDAR</a>
+                <a href="https://www.academymuseum.org/en/calendar" target="_blank" class="flex items-center justify-center bg-amber-600 rounded-xl font-bold text-sm">CALENDAR</a>
                 <a href="https://www.academymuseum.org/en/programs" target="_blank" class="flex items-center justify-center bg-slate-800 rounded-xl font-bold text-sm border border-slate-700">PROGRAMS</a>
             </div>
         </div>
 
         <div class="bg-slate-900 p-6 rounded-3xl border border-slate-800 shadow-xl">
+            <h2 class="text-xl font-black uppercase text-white mb-3">Cinematheque</h2>
+            <div class="grid grid-cols-2 gap-3">
+                <a href="https://www.americancinematheque.com/now-showing/?event_location=102" target="_blank" class="flex items-center justify-center bg-slate-800 rounded-xl font-bold text-xs border border-slate-700 py-3">AERO (S.M.)</a>
+                <a href="https://www.americancinematheque.com/now-showing/?event_location=104" target="_blank" class="flex items-center justify-center bg-slate-800 rounded-xl font-bold text-xs border border-slate-700 py-3">EGYPTIAN (HWD)</a>
+            </div>
+        </div>
+
+        <div class="bg-slate-900 p-6 rounded-3xl border border-slate-800 shadow-xl">
             <h2 class="text-xl font-black uppercase text-indigo-400 mb-4">My Watchlist</h2>
-            <textarea id="watchlist" class="w-full bg-slate-950 border border-slate-800 rounded-2xl p-4 text-sm focus:border-indigo-500 outline-none mb-4 min-h-[150px]" placeholder="List movies you're hunting for (e.g. 2001: A Space Odyssey, Heat, etc.)"></textarea>
-            <button onclick="saveList()" class="w-full bg-slate-100 text-slate-950 font-black py-4 rounded-2xl uppercase text-xs tracking-widest shadow-lg">Save Watchlist</button>
+            <textarea id="watchlist" class="w-full bg-slate-950 border border-slate-800 rounded-2xl p-4 text-sm focus:border-indigo-500 outline-none mb-4 min-h-[120px]" placeholder="Movies to watch for..."></textarea>
+            <button onclick="saveList()" class="w-full bg-indigo-500 text-white font-black py-4 rounded-2xl uppercase text-xs tracking-widest shadow-lg">Save Watchlist</button>
         </div>
 
     </div>
@@ -59,8 +80,7 @@
     <script>
         const KEY = 'Matthew_Cinema_Watchlist';
         function saveList() {
-            const val = document.getElementById('watchlist').value;
-            localStorage.setItem(KEY, val);
+            localStorage.setItem(KEY, document.getElementById('watchlist').value);
             alert("Watchlist Secured.");
         }
         window.onload = () => {
